--- a/src/Club/BookingBundle/Resources/config/listener.yml
+++ b/src/Club/BookingBundle/Resources/config/listener.yml
@@ -9,3 +9,8 @@ services:
     arguments: [@router, @security.context, @translator, %club_booking.enabled%]
     tags:
       - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
+  club.bookingbundle.dashboard_listener:
+    class: Club\BookingBundle\Listener\DashboardListener
+    arguments: [@doctrine.orm.entity_manager, @security.context, @templating]
+    tags:
+      - { name: kernel.event_listener, event: dashboard.view, method: onDashboardView }
