--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -33,6 +33,7 @@ club_booking:
     num_book_future: 4
     cancel_minute_before: 120
     cancel_minute_created: 5
+    booking_style: horizontal
 
 club_mail:
     default_sender_address: info@clubmaster.org
