Fixed menu items to correct listeners, and added member controller.

--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -24,3 +24,13 @@ services:
     arguments: [@doctrine.orm.entity_manager, @session]
     tags:
       - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+  club.userbundle.top_menu_listener:
+    class: Club\UserBundle\Listener\MenuListener
+    arguments: [@router, @security.context, @translator]
+    tags:
+      - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
+  club.userbundle.left_menu_listener:
+    class: Club\UserBundle\Listener\MenuListener
+    arguments: [@router, @security.context, @translator]
+    tags:
+      - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
