--- a/src/Club/RankingBundle/Resources/config/services.yml
+++ b/src/Club/RankingBundle/Resources/config/services.yml
@@ -1,7 +1,4 @@
-parameters:
-#    club_ranking.example.class: Club\RankingBundle\Example
-
 services:
-#    club_ranking.example:
-#        class: %club_ranking.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    club_ranking.match:
+        class: Club\RankingBundle\Helper\Match
+        arguments: [@doctrine.orm.entity_manager]
