--- a/src/Club/ShopBundle/Resources/config/services.yml
+++ b/src/Club/ShopBundle/Resources/config/services.yml
@@ -15,3 +15,6 @@ services:
     class: Twig_Extensions_Extension_Text
     tags:
       - { name: twig.extension }
+  shop_paymentmethod:
+    class: Club\ShopBundle\Helper\PaymentMethod
+    arguments: [@event_dispatcher]
