--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -2,6 +2,12 @@ parameters:
     web_path: %kernel.root_dir%/../web
     upload_path: uploads
 
+club_payment_cash:
+    enabled: true
+
+club_payment_quickpay:
+    enabled: true
+
 club_api:
     api_key: THIS_IS_A_DEMO_KEY
 
