--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -8,11 +8,13 @@ club_payment_cash:
 club_payment_quickpay:
     enabled: true
     merchant: example
+    secret: xxxxx
     protocol: 4
     language: en
     currency: DKK
     autocapture: 1
     cardtypelock:
+    quickpay_url: https://secure.quickpay.dk/form/
 
 club_api:
     api_key: THIS_IS_A_DEMO_KEY
