--- a/src/Club/TeamBundle/Resources/config/listener.yml
+++ b/src/Club/TeamBundle/Resources/config/listener.yml
@@ -34,3 +34,8 @@ services:
     arguments: [@doctrine.orm.entity_manager, @security.context, @templating]
     tags:
       - { name: kernel.event_listener, event: member.view, method: onMemberView }
+  club.team.listener.checkin:
+    class: Club\TeamBundle\Listener\Checkin
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: checkin, method: onCheckin }
