Added allowed guest bookings.

--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -53,6 +53,7 @@ club_booking:
     enabled: true
     enable_guest: true
     guest_price: 50
+    guest_unpaid_allowed: 1
     num_book_guest_day: 1
     num_book_guest_future: 1
     num_book_same_partner_day: 1
