Changed default clubmaster config.

--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -9,7 +9,7 @@ club_account_economic:
     password: xxxxxxxx
     economic_url: https://www.e-conomic.com/secure/api1/EconomicWebservice.asmx?WSDL
     contraAccount: 5820
-    cashbook: Indbetalinger
+    cashbook: Daglig
     currency: DKK
 
 club_payment_cash:
