--- a/src/Club/LogBundle/Resources/config/listener.yml
+++ b/src/Club/LogBundle/Resources/config/listener.yml
@@ -39,3 +39,8 @@ services:
     arguments: [@doctrine.orm.entity_manager]
     tags:
       - { name: kernel.event_listener, event: task.error, method: onTaskError }
+  club.log.dashboard_listener:
+    class: Club\LogBundle\Listener\DashboardListener
+    arguments: [@doctrine.orm.entity_manager, @security.context, @templating]
+    tags:
+      - { name: kernel.event_listener, event: admin_dashboard.view, method: onAdminDashboardView }
