--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -34,3 +34,8 @@ services:
     arguments: [@router, @security.context, @translator]
     tags:
       - { name: kernel.event_listener, event: left_menu.render, method: onLeftMenuRender }
+  club.user.dashboard_listener:
+    class: Club\UserBundle\Listener\DashboardListener
+    arguments: [@doctrine.orm.entity_manager, @security.context, @templating]
+    tags:
+      - { name: kernel.event_listener, event: admin_dashboard.view, method: onAdminDashboardView }
