Obey rule of invite only.

--- a/src/Club/RankingBundle/Resources/config/services.yml
+++ b/src/Club/RankingBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
 services:
     club_ranking.match:
         class: Club\RankingBundle\Helper\Match
-        arguments: [@doctrine.orm.entity_manager]
+        arguments: [@doctrine.orm.entity_manager, @translator]
