--- a/src/Club/MatchBundle/Resources/config/services.yml
+++ b/src/Club/MatchBundle/Resources/config/services.yml
@@ -2,3 +2,6 @@ services:
     club_match.match:
         class: Club\MatchBundle\Helper\Match
         arguments: [@doctrine.orm.entity_manager, @translator]
+    club_match.league:
+        class: Club\MatchBundle\Helper\League
+        arguments: [@doctrine.orm.entity_manager, @translator]
