--- a/src/Club/BookingBundle/Resources/config/listener.yml
+++ b/src/Club/BookingBundle/Resources/config/listener.yml
@@ -19,3 +19,8 @@ services:
     arguments: [@doctrine.orm.entity_manager, @security.context, @templating]
     tags:
       - { name: kernel.event_listener, event: member.view, method: onMemberView }
+  club.booking.listener.checkin:
+    class: Club\BookingBundle\Listener\Checkin
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: checkin, method: onCheckin }
