--- a/src/Club/BookingBundle/Resources/config/listener.yml
+++ b/src/Club/BookingBundle/Resources/config/listener.yml
@@ -24,3 +24,8 @@ services:
     arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: checkin, method: onCheckin }
+  club.booking.listener.checkin:
+    class: Club\BookingBundle\Listener\CleanupBooking
+    arguments: [@service_container]
+    tags:
+      - { name: kernel.event_listener, event: booking.cleanup, method: onBookingCleanup }
