--- a/src/Club/TeamBundle/Resources/config/listener.yml
+++ b/src/Club/TeamBundle/Resources/config/listener.yml
@@ -39,3 +39,8 @@ services:
     arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: checkin, method: onCheckin }
+  club.team.fixtures.load:
+    class: Club\TeamBundle\Fixtures\Load
+    arguments: [@doctrine.orm.entity_manager]
+    tags:
+      - { name: kernel.event_listener, event: fixtures.init, method: onFixturesInit }
