--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -22,7 +22,7 @@ services:
       - { name: kernel.event_listener, event: security.interactive_login }
   club.userbundle.location:
     class: Club\UserBundle\Listener\LocationListener
-    arguments: [@doctrine.orm.entity_manager, @session]
+    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
   club.userbundle.top_menu_listener:
