--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+ClubPaginatorBundle:
+    resource: "@ClubPaginatorBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 ClubCheckinBundle:
     resource: "@ClubCheckinBundle/Controller/"
     type:     annotation
