--- a/src/Club/UserBundle/Resources/config/listener.yml
+++ b/src/Club/UserBundle/Resources/config/listener.yml
@@ -17,7 +17,7 @@ services:
       - { name: kernel.event_listener, event: ban.task, method: onBanTask }
   club.userbundle.login_listener:
     class: Club\UserBundle\Listener\LoginListener
-    arguments: [@doctrine.orm.entity_manager, @security.context, @session]
+    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: security.interactive_login }
   club.userbundle.location:
