--- a/src/Club/TeamBundle/Resources/config/listener.yml
+++ b/src/Club/TeamBundle/Resources/config/listener.yml
@@ -38,7 +38,7 @@ services:
     class: Club\TeamBundle\Listener\Checkin
     arguments: [@service_container]
     tags:
-      - { name: kernel.event_listener, event: checkin, method: onCheckin }
+      - { name: kernel.event_listener, event: checkin.user, method: onCheckinUser }
   club.team.fixtures.load:
     class: Club\TeamBundle\Fixtures\Load
     arguments: [@doctrine.orm.entity_manager]
