--- a/app/config/clubmaster.yml
+++ b/app/config/clubmaster.yml
@@ -90,7 +90,9 @@ club_checkin:
         - 127.0.0.1
 
 club_layout:
-    logo: nibe_logo.png
+    #logo_path: nibe_logo.png
+    #logo_url:
+    #logo_title:
 
 ornicar_gravatar:
     rating: g
