--- a/src/Club/BookingBundle/Resources/config/listener.yml
+++ b/src/Club/BookingBundle/Resources/config/listener.yml
@@ -11,13 +11,9 @@ services:
       - { name: kernel.event_listener, event: top_menu.render, method: onTopMenuRender }
   club.bookingbundle.dashboard_listener:
     class: Club\BookingBundle\Listener\DashboardListener
-    arguments: [@doctrine.orm.entity_manager, @security.context, @templating]
+    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: dashboard.view, method: onDashboardView }
-  club.bookingbundle.member_listener:
-    class: Club\BookingBundle\Listener\DashboardListener
-    arguments: [@doctrine.orm.entity_manager, @security.context, @templating]
-    tags:
       - { name: kernel.event_listener, event: member.view, method: onMemberView }
   club.booking.listener.checkin:
     class: Club\BookingBundle\Listener\Checkin
