--- a/src/Club/MailBundle/Resources/config/listener.yml
+++ b/src/Club/MailBundle/Resources/config/listener.yml
@@ -1,22 +1,22 @@
 services:
   club.mailbundle.listener.on_password_reset_listener:
     class: Club\MailBundle\Listener\PasswordResetListener
-    arguments: [@doctrine.orm.entity_manager, @templating, @router, @clubmaster_mailer]
+    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: password.reset, method: onPasswordReset }
   club.mailbundle.listener.on_user_new_listener:
     class: Club\MailBundle\Listener\UserNewListener
-    arguments: [@doctrine.orm.entity_manager, @templating, @router, @clubmaster_mailer]
+    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: user.new, method: onUserNew }
   club.mailbundle.listener.on_order_new_listener:
     class: Club\MailBundle\Listener\OrderNewListener
-    arguments: [@doctrine.orm.entity_manager, @templating, @router, @clubmaster_mailer]
+    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: shop.order, method: onShopOrder }
   club.mailbundle.listener.on_order_accepted_listener:
     class: Club\MailBundle\Listener\OrderAcceptedListener
-    arguments: [@doctrine.orm.entity_manager, @templating, @router, @clubmaster_mailer]
+    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: order.change, method: onOrderChange, priority: 10 }
   club.mailbundle.listener.on_mail_task_listener:
@@ -26,11 +26,7 @@ services:
       - { name: kernel.event_listener, event: mail.task, method: onMailTask }
   club.mailbundle.listener.booking_confirm_listener:
     class: Club\MailBundle\Listener\BookingListener
-    arguments: [@doctrine.orm.entity_manager, @templating, @router, @clubmaster_mailer]
+    arguments: [@service_container]
     tags:
       - { name: kernel.event_listener, event: booking.confirm, method: onBookingConfirm }
-  club.mailbundle.listener.booking_cancel_listener:
-    class: Club\MailBundle\Listener\BookingListener
-    arguments: [@doctrine.orm.entity_manager, @templating, @router, @clubmaster_mailer]
-    tags:
       - { name: kernel.event_listener, event: booking.cancel, method: onBookingCancel }
