Renamed a match controller to fix the random matches.

--- a/src/Club/MatchBundle/Resources/config/routing.yml
+++ b/src/Club/MatchBundle/Resources/config/routing.yml
@@ -8,6 +8,11 @@ _match_match:
   type: annotation
   prefix: /match/match
 
+_match_match:
+  resource: "@ClubMatchBundle/Controller/LeagueMatchController.php"
+  type: annotation
+  prefix: /match/league/match
+
 _match_match_comment:
   resource: "@ClubMatchBundle/Controller/MatchCommentController.php"
   type: annotation
