Made annotation routing in match.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -69,7 +69,7 @@ ClubFeedbackBundle:
     resource: "@ClubFeedbackBundle/Resources/config/routing.yml"
 
 ClubMatchBundle:
-    resource: "@ClubMatchBundle/Resources/config/routing.yml"
+    resource: "@ClubMatchBundle/Controller/"
 
 homepage:
     pattern: /
