--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -66,7 +66,7 @@ ClubWelcomeBundle:
     resource: "@ClubWelcomeBundle/Resources/config/routing.yml"
 
 ClubFeedbackBundle:
-    resource: "@ClubFeedbackBundle/Resources/config/routing.yml"
+    resource: "@ClubFeedbackBundle/Controller/"
 
 ClubMatchBundle:
     resource: "@ClubMatchBundle/Controller/"
