Moved welcome to annotation routing.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -62,7 +62,8 @@ ClubDashboardBundle:
     resource: "@ClubDashboardBundle/Resources/config/routing.yml"
 
 ClubWelcomeBundle:
-    resource: "@ClubWelcomeBundle/Resources/config/routing.yml"
+    resource: "@ClubWelcomeBundle/Controller/"
+    type:     annotation
 
 ClubFeedbackBundle:
     resource: "@ClubFeedbackBundle/Controller/"
