Moved booking to annotation routing.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -56,7 +56,8 @@ ClubMessageBundle:
     resource: "@ClubMessageBundle/Resources/config/routing.yml"
 
 ClubBookingBundle:
-    resource: "@ClubBookingBundle/Resources/config/routing.yml"
+    resource: "@ClubBookingBundle/Controller/"
+    type:     annotation
 
 ClubDashboardBundle:
     resource: "@ClubDashboardBundle/Controller/"
