Moved event bundle to annotation routing.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -44,7 +44,8 @@ ClubLogBundle:
     type:     annotation
 
 ClubEventBundle:
-    resource: "@ClubEventBundle/Resources/config/routing.yml"
+    resource: "@ClubEventBundle/Controller/"
+    type:     annotation
 
 ClubInstallBundle:
     resource: "@ClubInstallerBundle/Resources/config/routing.yml"
