Moved annotation routing to userbundle.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -30,7 +30,8 @@ ClubShopBundle:
     type: annotation
 
 ClubUserBundle:
-    resource: "@ClubUserBundle/Resources/config/routing.yml"
+    resource: "@ClubUserBundle/Controller/"
+    type: annotation
 
 ClubTaskBundle:
     resource: "@ClubTaskBundle/Controller/"
